--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1933,6 +1933,9 @@ header {
     p {
       display: block;
     }
+    .know-more {
+      display: block;
+    }
   }
 }
 
@@ -1961,6 +1964,12 @@ header {
   font-weight: normal;
   display: none;
   text-align: start;
+}
+.feature_slider_inner .feature_s_item .know-more {
+  display: none;
+  color: #bf202f;
+
+  border-radius: 5px;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px),
