--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -271,7 +271,7 @@ textarea:focus {
 
 /*------- short classes start -------*/
 .section-padding {
-  padding: 130px 0;
+  padding: 80px 0;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991.98px),
@@ -731,7 +731,7 @@ header {
 
 /*------ sticky menu style end ------*/
 .header-transparent {
-  top: 54px;
+  top: 36px;
   left: 0;
   width: 100%;
   position: absolute;
@@ -1646,6 +1646,7 @@ header {
 
 @media only screen and (min-width: 992px) and (max-width: 1199.98px) {
   .hero-slider-item {
+    /* margin-top: 0;/ */
     height: 550px;
   }
 }
@@ -1654,6 +1655,7 @@ header {
   .hero-slider-item {
     height: 400px;
     padding-top: 0;
+    margin-top: 0;
   }
 }
 
@@ -1661,6 +1663,7 @@ header {
   .hero-slider-item {
     height: 350px;
     padding-top: 0;
+    margin-top: 0;
   }
 }
 
